--- a/style.css
+++ b/style.css
@@ -136,14 +136,15 @@ footer {
   background-color: var(--custom-background-color);
   padding: 15px;
   margin: auto;
-  margin-bottom: 8px;
-  margin-top: 8px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   justify-content: center;
   border-radius: 20px;
-  width: 90%;
+  width: 85%;
   transition-duration: 1s;
   height: 200px;
   text-align: center;
+  padding: 15px;
 }
 
 .landing-block:hover {
@@ -165,6 +166,16 @@ footer {
   margin-top: -40px; 
   margin-right: 10px;
   float: left;
+}
+
+.logo-img {
+  width: 20%;
+  float: right;
+  margin-top: -55px;
+}
+
+.sponsor-block {
+  display: flex;
 }
 
 .active {
@@ -232,7 +243,7 @@ footer {
     padding-right: 10%;
   }
   .landing-block {
-    height: 240px;
+    height: 220px;
     width: 50%;
     margin: 10px;
   } 
@@ -252,6 +263,11 @@ footer {
   }
   .portrait-img {
     width: 20%;
+  }
+  .logo-img {
+    width: 10%;
+    float: right;
+    margin-top: -60px;
   }
 }
 
